# Feb_2026_StockMarket_Analysis_project

./: batch_app.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py
data/: portfolio.json  stock_master.duckdb  watchlist.json
pages/: 0_Home.py  1_Portfolio.py  2_Watchlist.py  3_Compare.py  4_Dashboard.py
utils/: constants.py  data_handler.py  db.py  indicators.py  market_data.py  ui_components.py
