[project]
name = "feb-2026-stockmarket-analysis-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.4",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "streamlit>=1.53.1",
    "streamlit-autorefresh>=1.0.1",
    "streamlit-lottie>=0.0.5",
    "tqdm>=4.67.2",
    "yfinance>=1.1.0",
]
